# game-with-your-brain

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  README.md  Warfighter.ruleset  _clang-format
.cargo/: config
calibration/: .gitignore  CMakeLists.txt  README.md  build.bat
calibration/cmake/: FINDSDL2_mixer.cmake  FindSDL2TTF.cmake
calibration/include/: collider.h  crc.h  end_scene.h  game_scene.h  game_state.h  input.h  keyboard_input.h  main_menu_scene.h  menu.h  renderer.h  scene.h  serial.h  serial_input.h  sprite.h  vec2.h
calibration/src/: CMakeLists.txt  Hello.cpp  SDL2Test.cpp  end_scene.cpp  game_scene.cpp  game_state.cpp  main.cpp  main_menu_scene.cpp  renderer.cpp  serial_input.cpp  sprite.cpp  vec2.cpp
data-merge/: README.md
data-merge/springboard/: README.md  springboard.ino
data-merge/springboard/springboard2/: springboard2.ino
eeg/Mindwave-WarfighterEngaged/: Mindwave.cpp  README.md
eeg/Mindwave-WarfighterEngaged/CodeForArduino/PrintAttention/: PrintAttention.ino
myo/: README.md  myoRead.ino
src/: error.rs  main.rs  sdft.rs
src/eeg/: mod.rs
src/emg_process/: mod.rs  moving_avg.rs  peak_to_peak.rs
src/myo/: emg_filters.rs  flappy.rs  mod.rs
src/springboard/: adafruit3502.rs  mcp4018.rs  mcp4922.rs  mod.rs
