[package]
name = "wfpi"
version = "0.1.0"
authors = ["Alic Szecsei <alszecse@microsoft.com>"]
edition = "2018"

[dependencies]
rppal = { version = "0.11.3", features=["hal"] }
simple-signal = "1.1.1"
failure = "0.1.5"
num = "0.2.0"
float_extras = "0.1.6"
tui = "0.6.2"
termion = "1.5.3"
cfg-if = "0.1.10"
single_value_channel = "1.2.1"
lazy_static = "1.4.0"

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"

[features]
default = ["mcp4018"]

adafruit = []
mcp4018 = []